[package]
name = "block_index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
serde_derive = "1.0.183"
serde_json = "1.0.104"
regex = "1.9.3"
data-encoding = "2.4.0"
reqwest = "0.11.18"
# tokio = { version = "1.30.0", features = ["full"] }
tokio = { version = "1.30.0", features = ["rt-multi-thread", "io-std", "time"] }
hyper = { version = "0.14.27", features = ["server"] }
once_cell = "1.18.0"

types = { path = "../types" }
