[package]
name = "chunk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
serde_derive = "1.0.183"
serde_json = "1.0.104" 
openssl = "0.10.56"
data-encoding = "2.4.0"
types = { path = "../types" }
block_index = { path = "../block_index" }
once_cell = "1.18.0"
